spec/compile_errors/duplicate_singleton_scoped.cr
require "../../src/hardwire"

class SpecialService
end

class Container
  include HardWire::Container

  singleton SpecialService
  scoped SpecialService
end
